--- a/bootcamp/authentication/templates/authentication/signup.html
+++ b/bootcamp/authentication/templates/authentication/signup.html
@@ -7,9 +7,9 @@
 {% endblock head %}
 
 {% block body %}
-  <h1 class="logo"><a href="{% url 'home' %}">Bootcamp</a></h1>
+  <h1 class="logo"><a href="{% url 'home' %}">CSECamp</a></h1>
   <div class="signup">
-    <h2>{% trans 'Sign up for Bootcamp' %}</h2>
+    <h2>{% trans 'Sign up for CseCamp' %}</h2>
     <form action="{% url 'signup' %}" method="post" role="form">
       {% csrf_token %}
       {% for field in form.visible_fields %}
@@ -25,6 +25,7 @@
         </div>
       {% endfor %}
       <button type="submit" class="btn btn-primary btn-lg">{% trans 'Create an account' %}</button>
+      <a href="/login/" class="btn btn-link">Log in</a>
     </form>
   </div>
 {% endblock body %}
