--- a/bootcamp/core/templates/core/network.html
+++ b/bootcamp/core/templates/core/network.html
@@ -24,7 +24,7 @@
             </div>
             <div class="panel-body">
               {% if user.profile.job_title %}
-                <p><strong>{% trans 'Job Title' %}:</strong> {{ user.profile.job_title }}</p>
+                <p><strong>{% trans 'Batch' %}:</strong> {{ user.profile.job_title }}</p>
               {% endif %}
               <p><strong>{% trans 'Username' %}: </strong> {{ user.username }}</p>
               {% if user.profile.location %}
