--- a/bootcamp/templates/base.html
+++ b/bootcamp/templates/base.html
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{% url 'home' %}">Bootcamp</a>
+              <a class="navbar-brand" href="{% url 'home' %}">CSECamp</a>
             </div>
             <div class="collapse navbar-collapse" id="menu">
               <ul class="nav navbar-nav">
@@ -77,9 +77,9 @@
           {% endblock main %}
         </div>
       </main>
-      <script src="{% static 'js/notifications.js' %}"></script>
-      <script src="{% static 'js/check_messages.js' %}"></script>
+      <!-- <script src="{% static 'js/notifications.js' %}"></script>
+      <script src="{% static 'js/check_messages.js' %}"></script> -->
     {% endblock body %}
-    <script src="{% static 'js/ga.js' %}"></script>
+    <!-- <script src="{% static 'js/ga.js' %}"></script> -->
   </body>
 </html>
